[package]
name = "actinu_cli"
version = "0.1.0"
edition = "2021"
description = "A CLI to control Actinu, from managing web-servers to manipulating data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
log = { workspace = true }
pretty_env_logger = "0.5.0"
actinu_core = { path = "../actinu_core" }
